--- a/app/src/main/res/layout/content_donate.xml
+++ b/app/src/main/res/layout/content_donate.xml
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/appBarLayout"
         app:layout_constraintVertical_bias="0.898"
-        tools:ignore="MissingConstraints,OnClick" />
+        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml" />
 
     <RadioGroup
         android:id="@+id/paymentMethod"
